--- a/index.html
+++ b/index.html
@@ -188,22 +188,39 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h2 class="aligncenter">Pentingnya Sistem Informasi dalam Literasi Media</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class="aligncenter"><h2 class="aligncenter">Pentingnya Sistem Informasi dalam Literasi Media</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Sistem informasi yang efektif membantu pelajar mengelola dan mengakses sumber informasi yang valid dan terpercaya. Beberapa keuntungan sistem informasi dalam konteks literasi media di kalangan pelajar adalah:
+<br>A. Akses Informasi Terpercaya
+<br>Sistem informasi memungkinkan pelajar mengakses sumber yang sahih, seperti jurnal akademik, ensiklopedia digital, atau situs web pendidikan. Dengan adanya sistem informasi yang baik, pelajar dapat belajar secara lebih mandiri dan kritis.
+<br>B. Fasilitas Pencarian yang Mudah
+<br>Sistem informasi yang dilengkapi dengan fitur pencarian yang canggih memudahkan pelajar dalam menemukan informasi yang mereka butuhkan tanpa harus tersesat dalam lautan informasi yang kurang valid.
+<br>C. Penyediaan Konten Edukatif
+<br>Sistem informasi dapat memfasilitasi penyediaan konten-konten edukatif yang dapat diakses oleh pelajar kapan saja. Ini sangat penting terutama di masa pandemi ketika pembelajaran daring semakin dominan.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h2 class="aligncenter">Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class="aligncenter"><h2 class="aligncenter">Strategi Mengembangkan Literasi Media di Kalangan Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Beberapa langkah yang dapat diambil untuk meningkatkan literasi media di kalangan pelajar adalah:
+<br>A. Pendidikan Literasi Media di Sekolah
+<br>Pendidikan tentang literasi media perlu dimasukkan ke dalam kurikulum sekolah. Pelajar perlu diajarkan bagaimana memverifikasi sumber informasi, memahami bias dalam media, dan mengenali berita palsu.
+<br>B. Mendorong Penggunaan Teknologi dengan Bijak
+<br>Pihak sekolah dan orang tua harus memberikan pemahaman tentang penggunaan teknologi secara bijak, baik dalam hal penggunaan media sosial maupun dalam mengonsumsi berita di internet.
+<br>C. Pelatihan dan Workshop
+<br>Workshop atau pelatihan tentang cara menggunakan teknologi untuk mencari dan memproses informasi dengan benar sangat diperlukan. Ini bisa mencakup pelatihan tentang cara menggunakan mesin pencari dengan efektif, memahami literasi digital, hingga menjaga privasi dan keamanan di internet.
+<br>D. Peran Orang Tua dan Guru
+<br>Orang tua dan guru juga memainkan peran penting dalam membimbing pelajar dalam memahami dan mengembangkan literasi media. Mereka perlu memberikan contoh bagaimana cara memilih informasi yang baik dan mendorong anak-anak untuk berpikir kritis terhadap konten media yang mereka konsumsi.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h2 class="aligncenter">Dampak Literasi Media Terhadap Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class="aligncenter"><h2 class="aligncenter">Dampak Literasi Media Terhadap Pelajar</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Peningkatan literasi media di kalangan pelajar memberikan berbagai dampak positif, di antaranya:
+<br>A. Kemandirian dalam Belajar: Pelajar dapat belajar mandiri dengan mengeksplorasi informasi secara kritis dan objektif.
+<br>B. Kemampuan Berpikir Kritis: Literasi media melatih pelajar untuk tidak hanya menerima informasi begitu saja, melainkan menganalisis dan menilai kebenaran serta dampaknya.
+<br>C. Keamanan Digital: Pelajar yang paham literasi media cenderung lebih berhati-hati dalam menjaga privasi dan data pribadi mereka di internet.</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h2 class="aligncenter">Kesimpulan</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class="aligncenter"><h2 class="aligncenter">Kesimpulan</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Sistem informasi dan literasi media adalah dua hal yang sangat penting di era digital ini, terutama bagi pelajar yang terus-menerus terpapar informasi dari berbagai sumber. Dengan meningkatkan literasi media, pelajar dapat menjadi lebih kritis dan bijak dalam memilih dan mengonsumsi informasi. Sekolah, keluarga, dan lingkungan perlu bekerja sama untuk membekali pelajar dengan kemampuan ini agar mereka dapat menghadapi tantangan dunia digital dengan lebih baik.</div>
 			</div>
 		</div>
 </section>
