--- a/about.html
+++ b/about.html
@@ -32,16 +32,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  <a class="navbar-brand" href="index.html">RUSERBVOK</a>
+                  <a class="navbar-brand" href="index.html"><img src="img/vokasi.png" alt="logo"/></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li> 
-						<li class="active"><a href="about.html">About Us</a></li>
-<!-- 						<li><a href="courses.html">Courses</a></li> -->
-<!--                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li> -->
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Dashboard</a></li> 
+			<li class="active"><a href="about.html">Tentang Kami</a></li>
+                        <li><a href="contact.html">Kontak</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +48,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<h2 class="pageTitle">About Us</h2>
+				<h2 class="pageTitle">Tentang Kami</h2>
 			</div>
 		</div>
 	</div>
@@ -211,7 +208,7 @@
 				
 						<!-- Heading -->
 						<div class="block-heading-six">
-							<h3 class="bg-color">Our Team</h3>
+							<h3 class="bg-color">Kelompok 1</h3>
 						</div>
 						<br>
 						
@@ -225,8 +222,8 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team1.jpg" alt="">
 										<!-- Name -->
-										<h4>Johne Doe</h4>
-										<span class="deg">Creative</span> 
+										<h4>Moh. Farid Aku</h4>
+										<span class="deg">Mahasiswa</span> 
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
@@ -235,8 +232,8 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team2.jpg" alt="">
 										<!-- Name -->
-										<h4>Jennifer</h4>
-										<span class="deg">Programmer</span> 
+										<h4>Moh. Chairil Lipoeto</h4>
+										<span class="deg">Mahasiswa</span> 
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
@@ -245,8 +242,8 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team3.jpg" alt="">
 										<!-- Name -->
-										<h4>Christean</h4>
-										<span class="deg">CEO</span> 
+										<h4>Moh. Fadly Y. Nuwa</h4>
+										<span class="deg">Mahasiswa</span> 
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
@@ -255,8 +252,18 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team4.jpg" alt="">
 										<!-- Name -->
-										<h4>Kerinele rase</h4>
-										<span class="deg">Manager</span> 
+										<h4>Moh. Angriawan Arief</h4>
+										<span class="deg">Mahasiswa</span> 
+									</div>
+								</div>
+								<div class="col-md-3 col-sm-6">
+									<!-- Team Member -->
+									<div class="team-member">
+										<!-- Image -->
+										<img class="img-responsive" src="img/team4.jpg" alt="">
+										<!-- Name -->
+										<h4>Sry Meylan Hunowu</h4>
+										<span class="deg">Mahasiswa</span> 
 									</div>
 								</div>
 							</div>
@@ -274,46 +281,22 @@
 		<div class="row">
 			<div class="col-lg-3">
 				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
+					<h5 class="widgetheading">Kontak Kami</h5>
 					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
+					<strong>PROGRAM VOKASI UNG</strong></address>
 					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
+						<i class="icon-phone"></i> (62) 821 9620 4946 <br>
+						<i class="icon-envelope-alt"></i> programvokasi@ung.ac.id
 					</p>
 				</div>
 			</div>
 			<div class="col-lg-3">
 				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
+					<h5 class="widgetheading">Dashboard</h5>
 					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
+						<li><a href="index.html">Dashboard</a></li>
+						<li><a href="about.html">Tentang Kami</a></li>
+						<li><a href="contact.html">Kontak</a></li>
 					</ul>
 				</div>
 			</div>
@@ -325,18 +308,9 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<span>&copy; Copyright@2024. Web By </span><a href="https://sekolahvokasi.ung.ac.id/" target="_blank">Vokasikuat</a>
 						</p>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
